--- a/youtube.html
+++ b/youtube.html
@@ -18,7 +18,7 @@
           <div class="youtube-logo-container">
             <img class="youtube-logo" src="icons/youtube-logo.svg">
             <div class="in-tooltip">IN</div>
-            <div class="home-tooltip">Youtube Home</div>
+            <!--div class="home-tooltip">Youtube Home</!--div-->
           </div>
       </div>
       <div class="middle-section">
@@ -56,20 +56,12 @@
     </div>
       <div class="sidebar-link">
         <img src="icons/explore.svg">
-      <div>Explore</div>
+      <div>Shorts</div>
     </div>
       <div class="sidebar-link">
         <img src="icons/subscriptions.svg">
       <div>Subscriptions</div>
     </div>
-      <div class="sidebar-link">
-        <img src="icons/originals.svg">
-        <div>Originals</div>
-      </div>
-      <div class="sidebar-link">
-        <img src="icons/youtube-music.svg">
-        <div>YouTube Music</div>
-      </div>
       <div class="sidebar-link">
         <img src="icons/library.svg">
         <div>Library</div>
