changes in header

--- a/youtube.html
+++ b/youtube.html
@@ -29,7 +29,7 @@
           <div class="tooltip">search</div>
         </button>
         <button class="voice-search-button">
-          <img cass="voice-search-icon" src="icons/voice-search-icon.svg">
+          <img class="voice-search-icon" src="icons/voice-search-icon.svg">
           <div class="tooltip">search with your voice</div>
         </button>
       </div>
@@ -41,7 +41,7 @@
           <div class="notifications-icon-container">
             <img class="notifications-icon" src="icons/notifications.svg">
             <div class="notifications-count">
-              3
+              9+
             </div>
             <div class="tooltip">Notifications</div>
           </div>
