--- a/youtube.html
+++ b/youtube.html
@@ -64,7 +64,7 @@
     </div>
       <div class="sidebar-link">
         <img src="icons/library.svg">
-        <div>Library</div>
+        <div>You</div>
       </div>
     </nav>
     <main>
