--- a/youtube.html
+++ b/youtube.html
@@ -214,6 +214,150 @@
             </div>
           </div>
         </div>
+        </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
+              <img class="thumbnail" src="thumbnails/thumbnail-7.webp">
+            </a>
+            <div class="vedio-time">10:13</div>
+          </div>
+          <div class="vedio-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-7.jpeg">
+            </div>
+            <div class="vedio-info">
+              <p class="vedio-title">
+                Why Planes Don't Fly Over Tibet
+              </p>
+              <p class="vedio-author">
+                RealLifeLore
+              </p>
+              <p class="vedio-stats">
+                6.6M views &#183;  1 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <a href="https://www.youtube.com/watch?v=lFm4EM1juls">
+              <img class="thumbnail" src="thumbnails/thumbnail-8.webp">
+            </a>
+            <div class="vedio-time">7:12</div>
+          </div>
+          <div class="vedio-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-8.jpeg">
+            </div>
+            <div class="vedio-info">
+              <p class="vedio-title">
+                Inside The World's Biggest Passenger Plane
+              </p>
+              <p class="vedio-author">
+                Tech Vision
+              </p>
+              <p class="vedio-stats">
+                3.7M views &#183; 10 months ago
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
+              <img class="thumbnail" src="thumbnails/thumbnail-9.webp">
+            </a>
+            <div class="vedio-time">13:17</div>
+          </div>
+          <div class="vedio-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-9.jpeg">
+            </div>
+            <div class="vedio-info">
+              <p class="vedio-title">
+
+                The SECRET to Super Human STRENGTH              </p>
+              <p class="vedio-author">
+                ThenX
+              </p>
+              <p class="vedio-stats">
+                20M views &#183; 3 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o">
+              <img class="thumbnail" src="thumbnails/thumbnail-10.webp">
+            </a>
+            <div class="vedio-time">7:53</div>
+          </div>
+          <div class="vedio-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-10.jpeg">
+            </div>
+            <div class="vedio-info">
+              <p class="vedio-title">
+
+                How The World's Largest Cruise Ship Makes 30,000 Meals Every Day              </p>
+              <p class="vedio-author">
+                Business Insider
+              </p>
+              <p class="vedio-stats">
+                14M views &#183;  1 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">
+              <img class="thumbnail" src="thumbnails/thumbnail-11.webp">
+            </a>
+            <div class="vedio-time">4:10</div>
+          </div>
+          <div class="vedio-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-11.jpeg">
+            </div>
+            <div class="vedio-info">
+              <p class="vedio-title">
+                Dubai's Crazy Underwater Train and Other Things #Only in Dubai              </p>
+              <p class="vedio-author">
+                Destination Tips
+              </p>
+              <p class="vedio-stats">
+                3M views &#183; 1 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">
+              <img class="thumbnail" src="thumbnails/thumbnail-12.webp">
+            </a>
+            <div class="vedio-time">4:51</div>
+          </div>
+          <div class="vedio-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-12.jpeg">
+            </div>
+            <div class="vedio-info">
+              <p class="vedio-title">
+                 What would happen if you didn’t drink water? - Mia Nacamulli              </p>
+              <p class="vedio-author">
+                TED-Ed
+              </p>
+              <p class="vedio-stats">
+                12M views &#183; 5 years ago
+              </p>
+            </div>
+          </div>
+        </div>
+
       </section>
     </main>
   </body>
