--- a/youtube.html
+++ b/youtube.html
@@ -56,7 +56,7 @@
     </div>
       <div class="sidebar-link">
         <img src="icons/explore.svg">
-      <div>Shorts</div>
+      <div>Explore</div>
     </div>
       <div class="sidebar-link">
         <img src="icons/subscriptions.svg">
